--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ out/production/FKStats/main/CommandHandler.class
 out/production/FKStats/main/FKStats.class
 out/production/FKStats/main/Listener.class
 out/production/FKStats/plugin.yml
+.idea/uiDesigner.xml
