--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ out/production/FKStats/main/FKStats.class
 out/production/FKStats/main/Listener.class
 out/production/FKStats/plugin.yml
 .idea/uiDesigner.xml
+.vscode/settings.json
